cabal-version:      2.4
name:               lrParser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Albert Lee
maintainer:         albert.lee.taiwan@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:

library
    exposed-modules:  Parser Parser.Internal

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
        containers >= 0.6.5 && < 0.7
    hs-source-dirs:   src
    default-language: Haskell2010
